# reveille

./: .gitignore  DESIGN.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: TESTING.md  gist.md  servers.example.json
scripts/: make_icon.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: SeedGameUserSettings.ini
src-tauri/src/: main.rs  session.rs  settings.rs
src-ui/: app.js  banner.css  banner.html  banner.js  config.js  index.html  styles.css
