[package]
name = "reveille"
version = "0.1.0"
description = "One-click Squad server seeder for 7Cav"
authors = ["7Cav"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"

[features]
# By default Tauri uses a custom protocol; keep this for parity with scaffolds.
custom-protocol = ["tauri/custom-protocol"]
